--- a/myweb.html
+++ b/myweb.html
@@ -3,25 +3,23 @@
 	</head>
 <center>
 <body>
-	<img src="images/man.jpg" width="250px" height="200px" ><br>
+	<img src="man.jpg" width="250px" height="200px" ><br>
 	&nbsp; <br>	
 	<hr>
 	<h3><a href="http://www.google.com">GOOGLE </a>| <a href="http://www.facebook.com">FACEBOOK </a>|<a href="http://www.youtube.com"> YOUTUBE </a></h3> 
 	<hr>
 	<marquee><h4>  Welcome To My Website,Hope You Like It </h4></marquee>
 	
-	<img src="images/my.jpg" width="300px" height="300px">
-	<img src="images/myy.jpg" width="300px" height="300px">
-	<img src="images/myyy.jpg" width="300px" height="300px"><br>
+	<img src="my.jpg" width="300px" height="300px">
+	<img src="myy.jpg" width="300px" height="300px">
+	<img src="myyy.jpg" width="300px" height="300px"><br>
 
 	&nbsp; <br>
 	&nbsp; <br>
 <p> <b> These are some of my paintings , hope you like them </b> </p>
 	&nbsp; <br>
 	&nbsp; <br>
-<video width="720" height="380" controls>
-<source src="images/myvideo.mp4" type="video/mp4">
-</video>
+
 	&nbsp; <br>
 <p> <b> There must be a youtube video but it doesnt. </b> </p>
 <iframe width="720" height="380" src="https://youtu.be/tSDcbucrWmw"frameborder="0" allowfullscreen></iframe>
